2008-01-31  David Bateman  <dbateman@free.fr>

	* oct-sort.cc: conversion of int to octave_idx_type where needed
	for 64-bit builds.
	(IFLT): Allow IFLT macro to be overridden.
	* oct-sort.h: conversion of int to octave_idx_type where needed
	for 64-bit builds.
	(enum sortmode): Type of sort to perform.
	(vec_index): Simple class to aid in indexed sorts.
	
	* Array.h ( Array<T> sort (octave_idx_type, sortmode) const,
	Array<T> sort (Array<octave_idx_type> &, octave_idx_type,
	sortmode) const): Array sorting methods.
	(INSTANTIATE_ARRAY_SORT, NO_INSTANTIATE_ARRAY_SORT): Macros to
	instantiate the array sorting methods.
	* Array.cc (ascending_compare, descending_compare): New template
	functions for generic sort comparison.
  	( Array<T> Array<T>::sort (octave_idx_type, sortmode) const,
	Array<T> Array<T>::sort (Array<octave_idx_type> &, octave_idx_type,
	sortmode) const): Array sorting functions based of octave_sort
	class.
	* Array-C.cc: Instantiate the complex array sort methods. 
	(IFLT): New macro to override the one in the
	octave_sort class to avoid need for Complex < and > operators.
	(static double xabs (const Complex&)): Complex abs function
	avoiding std::abs(Inf) returning NaN with some compilers.
	(ascending_compare, descending compare): override template
	functions for complex comparison.
	* Array-d.cc: Instantiate the double array sort methods. 
	(Array<double> Array<double>::sort (octave_idx_type, 
	sortmode) const, Array<double> Array<double>::sort 
	(Array<octave_idx_type> &, octave_idx_type, sortmode) const): 
	Array sorting functions based of octave_sort using uint64 sorting
	on IEE754 doubles, for speed and correct sorting of Inf and NaN.
	(ascending_compare, descending compare): override template
	functions for double and uint64 comparison.
	* Array-b.cc, Array-ch.cc, Array-i.cc, Array-s.cc, Array-str.cc: 
	Instantiate the array sort methods.
	* Array-idx-vec.cc: Null instantiation of array sort methods.