@@ -35,9 +35,15 @@ along with Octave; see the file COPYING.  If not, see
 
 INSTANTIATE_ARRAY_SORT (int);
 INSTANTIATE_ARRAY_SORT (long);
+#if defined (HAVE_LONG_LONG_INT)
+INSTANTIATE_ARRAY_SORT (long long);
+#endif
 
 INSTANTIATE_ARRAY_AND_ASSIGN (int, OCTAVE_API);
 INSTANTIATE_ARRAY_AND_ASSIGN (long, OCTAVE_API);
+#if defined (HAVE_LONG_LONG_INT)
+INSTANTIATE_ARRAY_AND_ASSIGN (long long, OCTAVE_API);
+#endif
 
 INSTANTIATE_ARRAY_ASSIGN (int, short, OCTAVE_API);
 INSTANTIATE_ARRAY_ASSIGN (int, char, OCTAVE_API);
