@@ -1,3 +1,11 @@
+2008-02-03  John W. Eaton  <jwe@octave.org>
+
+	* Array-i.cc: Also instantiate Arrays for long long type if it exists.
+
+2008-02-03  Michael Goffioul  <michael.goffioul@gmail.com>
+
+	* Array.cc: Don't include Range.h.
+
 2008-01-31  David Bateman  <dbateman@free.fr>
 
 	* oct-sort.cc: conversion of int to octave_idx_type where needed
